--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "webstore-node-sqlite",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node dist/index.js",
+    "start": "node dist/server.js",
     "dev": "nodemon",
     "type": "module"
   },
@@ -14,6 +14,7 @@
   "description": "",
   "dependencies": {
     "better-sqlite3": "^11.8.1",
+    "colors": "^1.4.0",
     "express": "^4.21.2"
   },
   "devDependencies": {
